--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -128,6 +128,12 @@
                         <GithubCard Name="Law of 100" ProjectUrl="https://lawof100.co/" GithubUrl="https://github.com/sparc-coop/law-of-100" />
                         <GithubCard Name="Kodekit" ProjectUrl="https://app.kodekit.io/" GithubUrl="https://github.com/sparc-coop/kodekit" />
                         <GithubCard Name="Ibis" ProjectUrl="https://github.com/sparc-coop/ibis" GithubUrl="https://github.com/sparc-coop/ibis" />
+                        <GithubCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/citeblue" />
+                        <GithubCard Name="Sparc" ProjectUrl="https://www.sparc.coop/" GithubUrl="https://github.com/sparc-coop/sparc" />
+                        <GithubCard Name="Conseris" ProjectUrl="https://conseris.io/" GithubUrl="https://github.com/sparc-coop/conseris" />
+                        <GithubCard Name="Law of 100" ProjectUrl="https://lawof100.co/" GithubUrl="https://github.com/sparc-coop/law-of-100" />
+                        <GithubCard Name="Kodekit" ProjectUrl="https://app.kodekit.io/" GithubUrl="https://github.com/sparc-coop/kodekit" />
+                        <GithubCard Name="Ibis" ProjectUrl="https://github.com/sparc-coop/ibis" GithubUrl="https://github.com/sparc-coop/ibis" />
                     </div>
                     <div class="arrows-container carousel-backward" id="carousel-backward" @onmouseover=GoBackward @onmouseout=Stop>
                         <img src="/images/Double Arrow.png" />
