--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -6,7 +6,7 @@
     }
 
     100% {
-        transform: translateX(calc(-100px * 14));
+        transform: translateX(-2641px);
     }
 }
 
@@ -16,7 +16,7 @@
     }
 
     100% {
-        transform: translateX(calc(100px * 14));
+        transform: translateX(2641px);
     }
 }
 
@@ -289,14 +289,14 @@
                 display: flex;
                 justify-content: center;
                 gap: 24px;
-                animation: scroll 20s linear infinite;
+                animation: scroll 25s linear infinite;
 
                 &.backward {
-                    animation: scrollReverse 10s linear infinite;
+                    animation: scrollReverse 8s linear infinite;
                 }
 
                 &.forward {
-                    animation: scroll 10s linear infinite;
+                    animation: scroll 8s linear infinite;
                 }
 
                 .github-card {
