comment out arrows on project carousel

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -135,12 +135,12 @@
                         <GithubCard Name="Kodekit" ProjectUrl="https://app.kodekit.io/" GithubUrl="https://github.com/sparc-coop/kodekit" />
                         <GithubCard Name="Ibis" ProjectUrl="https://github.com/sparc-coop/ibis" GithubUrl="https://github.com/sparc-coop/ibis" />
                     </div>
-                    <div class="arrows-container carousel-backward" id="carousel-backward" @onmouseover=GoBackward @onmouseout=Stop>
+                    @*<div class="arrows-container carousel-backward" id="carousel-backward" @onmouseover=GoBackward @onmouseout=Stop>
                         <img src="/images/Double Arrow.png" />
                     </div>
                     <div class="arrows-container carousel-forward" id="carousel-forward" @onmouseover=GoForward @onmouseout=Stop>
                         <img src="/images/Double Arrow.png" />
-                    </div>
+                    </div>*@
                 </div>
             </div>
         </section>
