--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -264,7 +264,15 @@ footer .footer--column .column-links a {
   }
 }
 
-@keyframes scroll {
+@keyframes scroll_Logos {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-1400px);
+  }
+}
+@keyframes scroll_Projects {
   0% {
     transform: translateX(0);
   }
@@ -272,12 +280,12 @@ footer .footer--column .column-links a {
     transform: translateX(-2641px);
   }
 }
-@keyframes scrollReverse {
+@keyframes scrollReverse_Projects {
   0% {
     transform: translateX(0);
   }
   100% {
-    transform: translateX(2641px);
+    transform: translateX(-2641px);
   }
 }
 .landing {
@@ -415,7 +423,7 @@ footer .footer--column .column-links a {
   width: 100%;
   display: flex;
   gap: 69px;
-  animation: scroll 40s linear infinite;
+  animation: scroll_Logos 40s linear infinite;
 }
 .landing .projectlogo-carousel img {
   width: auto;
@@ -510,13 +518,13 @@ footer .footer--column .column-links a {
   display: flex;
   justify-content: center;
   gap: 24px;
-  animation: scroll 25s linear infinite;
+  animation: scroll_Projects 25s linear infinite;
 }
 .landing--projects .project-carousel .project-wrapper.backward {
-  animation: scrollReverse 8s linear infinite;
+  animation: scrollReverse_Projects 8s linear infinite;
 }
 .landing--projects .project-carousel .project-wrapper.forward {
-  animation: scroll 8s linear infinite;
+  animation: scroll_Projects 8s linear infinite;
 }
 .landing--projects .project-carousel .project-wrapper .github-card {
   width: 413px;
