--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -386,7 +386,8 @@
 
     &--cta {
         width: 100%;
-        padding: 150px 0;
+        margin-top: 250px;
+        margin-bottom: 147px;
         background: $background;
 
         .container {
