--- a/Sparc.Blossom.Server/Shared/Footer.scss
+++ b/Sparc.Blossom.Server/Shared/Footer.scss
@@ -2,7 +2,7 @@
 
 footer {
     width: 100%;
-    padding: 150px 0;
+    margin-bottom: 130px;
     background: $background;
     color: $white;
     display: flex;
