--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -230,7 +230,7 @@ nav .links--wrapper .explore-blossom {
 
 footer {
   width: 100%;
-  padding: 150px 0;
+  margin-bottom: 130px;
   background: #0A0A0A;
   color: #FFFFFF;
   display: flex;
@@ -590,7 +590,8 @@ footer .footer--column .column-links a {
 }
 .landing--cta {
   width: 100%;
-  padding: 150px 0;
+  margin-top: 250px;
+  margin-bottom: 147px;
   background: #0A0A0A;
 }
 .landing--cta .container {
