--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -327,7 +327,8 @@ footer .footer--column .column-links a {
   line-height: 95%;
 }
 .landing--hero .header p {
-  margin: 0;
+  width: 703px;
+  margin: 0 auto;
   font-family: "NimbusSansExtd";
   font-weight: 400;
   font-size: 20px;
@@ -370,8 +371,6 @@ footer .footer--column .column-links a {
 }
 .landing--intro .interactive-block {
   width: 100%;
-  max-width: 1054px;
-  height: 500px;
   margin: 0 auto;
   margin-top: 40px;
   border: solid 1px #F6F4F3;
@@ -391,8 +390,9 @@ footer .footer--column .column-links a {
   margin-bottom: 77px;
 }
 .landing--intro .interactive-block--placeholder img {
-  width: 1440px;
-  height: 485px;
+  width: 95%;
+  max-width: 1437px;
+  height: auto;
   margin: 0 auto;
 }
 .landing .projectlogo-carousel {
@@ -598,7 +598,7 @@ footer .footer--column .column-links a {
   padding: 0 80px;
   display: flex;
   justify-content: center;
-  gap: 40px;
+  gap: 54px;
   flex-wrap: wrap;
 }
 .landing--cta .header {
