repsonsive for tablet 800px

--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -8,19 +8,19 @@
         <div class="hero--image">
             <img src="images/Pattern_1.png" />
         </div>
-        <div class="header">
+        <header>
             <h1>From one codebase springs many platforms.</h1>
             <p class="subtitle-2">
                 Sparc offers a way to architect apps so that you can focus on painting the unique and beautiful art your app is meant to convey.
             </p>
-        </div>
+        </header>
     </section>
     <section class="landing--intro">
         <div class="container">
-            <div class="header">
+            <header>
                 <h3>Blossom breaks many paradigms</h3>
                 <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
-            </div>
+            </header>
             @*                <div class="interactive-block">
             <img src="images/Blocks.png" />
             </div>*@
@@ -110,10 +110,10 @@
         </section>
         <section class="landing--projects">
             <div class="container">
-                <div class="header">
+                <header>
                     <h3>Explore our work</h3>
                     <p class="subtitle-1">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet</p>
-                </div>
+                </header>
                 <div class="project-carousel" id="project-carousel">
                     <div class="project-wrapper @ProjectWrapperAnimation" id="project-wrapper">
                         <GithubCard Name="Citeblue" ProjectUrl="https://www.citeblue.com/" GithubUrl="https://github.com/sparc-coop/citeblue" />
@@ -147,13 +147,12 @@
         <section class="landing--cta">
             <div class="container">
                 <img src="/images/landing-cta.png" />
-                <div class="header right">
+                <header class="right">
                     <h3>Come and join us for the greatest marathon in the world</h3>
                     <a href="https://www.sparc.coop/" target="_blank" class="sign-up">Visit Sparc</a>
-                </div>
+                </header>
             </div>
         </section>
-        <Footer />
     </div>
 </div>
 
