--- a/Sparc.Blossom.Server/Shared/NavMenu.scss
+++ b/Sparc.Blossom.Server/Shared/NavMenu.scss
@@ -9,6 +9,10 @@
     backdrop-filter: blur(10px) brightness(120%);
     opacity: 1;
     z-index: 90;
+
+    @media screen and (max-width: 809px) {
+        height: 53px;
+    }
 }
 
 nav {
@@ -64,7 +68,7 @@ nav {
         }
     }
 
-    @media only screen and (max-width: 800px) {
+    @media only screen and (max-width: 809px) {
         padding: 9px 0;
         gap: 20px;
 
